# cornerhex

./: .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  README.md  meson.build  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
cornerhex/: __init__.py  meson.build  plot.py
docs/: requirements.txt
docs/source/: 1_quickstart.ipynb  2_customizations.ipynb  A_contrib_bug_feature.ipynb  api.rst  conf.py  index.rst
docs/source/api/: cornerhex.cornerplot.rst  cornerhex.sigma_to_quantile.rst
examples/: 1_quickstart.ipynb  A_contrib_bug_feature.ipynb
